@@ -42,47 +42,6 @@
 
 namespace std
 {
-  // Fill in the narrowing cache and flag whether all values are
-  // valid or not.  _M_narrow_ok is set to 2 if memcpy can't
-  // be used.
-  void
-  ctype<char>::
-  _M_narrow_init() const
-  {
-    char __tmp[sizeof(_M_narrow)];
-    for (size_t __i = 0; __i < sizeof(_M_narrow); ++__i)
-      __tmp[__i] = __i;
-    do_narrow(__tmp, __tmp + sizeof(__tmp), 0, _M_narrow);
-    
-    _M_narrow_ok = 1;
-    if (__builtin_memcmp(__tmp, _M_narrow, sizeof(_M_narrow)))
-      _M_narrow_ok = 2;
-    else
-      {
-	// Deal with the special case of zero: renarrow with a
-	// different default and compare.
-	char __c;
-	do_narrow(__tmp, __tmp + 1, 1, &__c);
-	if (__c == 1)
-	  _M_narrow_ok = 2;
-      }
-  }
-
-  void
-  ctype<char>::
-  _M_widen_init() const
-  {
-    char __tmp[sizeof(_M_widen)];
-    for (size_t __i = 0; __i < sizeof(_M_widen); ++__i)
-      __tmp[__i] = __i;
-    do_widen(__tmp, __tmp + sizeof(__tmp), _M_widen);
-    
-    _M_widen_ok = 1;
-    // Set _M_widen_ok to 2 if memcpy can't be used.
-    if (__builtin_memcmp(__tmp, _M_widen, sizeof(_M_widen)))
-      _M_widen_ok = 2;
-  }
-
   // NB: The other ctype<char> specializations are in src/locale.cc and
   // various /config/os/* files.
 
